fix(badges): update alignment

--- a/default/style.css
+++ b/default/style.css
@@ -73,7 +73,7 @@ li {
   position: relative;
   /* for disclaimer */
   width: var(--sidebar-width);
-  height: 100%;
+  /* height: 100%;*/
   padding: 0.6in var(--sidebar-horizontal-padding);
   background-color: #f2f2f2;
   font-size: 8.5pt;
@@ -433,13 +433,11 @@ h2 {
 }
 
 .container-badges {
-
   margin-top: 0.9in;
-  flex-flow: column wrap;
-  align-content: space-between;
-
-  bottom: var(--sidebar-footer-padding);
-  right: var(--sidebar-horizontal-padding);
+  display: flex;
+  flex-flow: row-reverse wrap-reverse;  /* ← key change */
+  justify-content: flex-start;          /* start = right when row-reverse */
+  gap: 2pt;
 }
 
 .container-badges a {
@@ -448,33 +446,17 @@ h2 {
   text-align: right;
 }
 
+/* three badges per row */
 .badge {
-  width: 32%;
-  position: relative;
+  flex: 0 0 32%;
+  text-decoration: none;
+}
+
+/* ensure images fill */
+.badge img {
+  width: 100%;
+  display: block;
   border-radius: 3px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-right: 0px;
-  margin-left: 0px;
-}
-
-.badge::before {
-  counter-increment: items;
-  content: counter(items);
-}
-
-/* Re-order items into 3 rows */
-.badge:nth-child(3n+1) { order: 1; }
-.badge:nth-child(3n+2) { order: 2; }
-.badge:nth-child(3n)   { order: 3; }
-
-/* Force new columns */
-.container-badges::before,
-.container-badges::after {
-  content: "";
-  flex-basis: 100%;
-  width: 0;
-  order: 2;
 }
 
 #disclaimer {
